--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:gravity="center">
 
     <Button
@@ -22,5 +23,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="hook feild"/>
+
+    <Button
+        android:id="@+id/clazz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hook class"/>
 
 </LinearLayout>
